src/main/java/antlr4/exprit/exprit.g4
grammar exprit;

prog: stat+;
stat: expr '\n' | '\n';
expr: term (('+'|'-') term)*;
term: fact | fact (('*'|'/') fact)+;
fact: '+' fact | '-' fact | '(' expr ')' | INT;

INT: [0-9]+;
OTHER: .-> skip;
